--- a/Nginx + Reverse Proxy/nginx.conf
+++ b/Nginx + Reverse Proxy/nginx.conf
@@ -6,7 +6,7 @@ error_log /var/log/nginx/error.log;
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
-    worker_connections 768;
+    worker_connections 5000;
     # multi_accept on;
 }
 
@@ -19,6 +19,8 @@ http {
     sendfile on;
     tcp_nopush on;
     types_hash_max_size 2048;
+    tcp_nodelay on;
+    keepalive_timeout 65;
     # server_tokens off;
     client_max_body_size 1000M;
     # server_names_hash_bucket_size 64;
