--- a/Nginx + Reverse Proxy/nginx.conf
+++ b/Nginx + Reverse Proxy/nginx.conf
@@ -1,13 +1,15 @@
 user www-data;
 worker_processes auto;
 pid /run/nginx.pid;
+worker_rlimit_nofile 100000;
 error_log /var/log/nginx/error.log;
 
 include /etc/nginx/modules-enabled/*.conf;
 
 events {
-    worker_connections 5000;
-    # multi_accept on;
+    worker_connections 10000;
+    multi_accept on;
+    use epoll;
 }
 
 http {
@@ -15,12 +17,17 @@ http {
     ##
     # Basic Settings
     ##
+    open_file_cache max=200000 inactive=20s;
+    open_file_cache_valid 30s;
+    open_file_cache_min_uses 2;
+    open_file_cache_errors on;
+
+    access_log off;
 
     sendfile on;
     tcp_nopush on;
     types_hash_max_size 2048;
     tcp_nodelay on;
-    keepalive_timeout 65;
     # server_tokens off;
     client_max_body_size 1000M;
     # server_names_hash_bucket_size 64;
@@ -44,20 +51,46 @@ http {
                       '$status $body_bytes_sent "$http_referer" '
                       '"$http_user_agent" "$http_x_forwarded_for"';
 
-    access_log /var/log/nginx/access.log;
-
     ##
     # Gzip Settings
     ##
 
     gzip on;
-    # gzip_vary on;
-    # gzip_proxied any;
-    # gzip_comp_level 6;
-    # gzip_buffers 16 8k;
-    # gzip_http_version 1.1;
-    # gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    # gzip_static on;
+    gzip_min_length 1024;
+    gzip_comp_level 1;
+    gzip_vary on;
+    gzip_disable msie6;
+    gzip_proxied expired no-cache no-store private auth;
+    gzip_types
+        text/css
+        text/javascript
+        text/xml
+        text/plain
+        text/x-component
+        application/javascript
+        application/x-javascript
+        application/json
+        application/xml
+        application/rss+xml
+        application/atom+xml
+        font/truetype
+        font/opentype
+        application/vnd.ms-fontobject;
 
+    # allow the server to close connection on non responding client, this will free up memory
+    reset_timedout_connection on;
+
+    # request timed out -- default 60
+    client_body_timeout 10;
+
+    # if client stop responding, free up memory -- default 60
+    send_timeout 2;
+
+    # server will close connection after this time -- default 75
+    keepalive_timeout 30;
+    # number of requests client can make over keep-alive -- for testing environment
+    keepalive_requests 100000;
     ##
     # Virtual Host Configs
     ##
